@@ -8,6 +8,7 @@
   and try the next, rather than giving up straight away.
 * Added text entry for date on save dialogs.
   Closes feature-requests #81 (option to manualy keyin date (or at least year)
+* Added device blacklist
 
 
 1.2.5 (17.05.2014):
